--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('estimados') }}">
+                            <i class="fas fa-chart-line me-1"></i>
+                            Estimados
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('reportes') }}">
                             <i class="fas fa-chart-bar me-1"></i>
                             Reportes
